--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     },
     "require": {
         "php": "^8.3",
-        "guzzlehttp/guzzle": "^7.8.1"
+        "guzzlehttp/guzzle": "^7.8.1",
+        "ext-simplexml": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^11.2",
