--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,10 +47,10 @@ jobs:
 
       - name: Run PHP CS
         run: vendor/bin/phpcs --standard=PSR12 src
-#
-#      - name: Replace OutputType
-#        run: sed -i "s/'type' => OutputType::[a-zA-Z]*/'type' => ${{ matrix.OutputType }}/" config/config.php
-#
+
+      - name: Replace OutputType
+        run: sed -i "s/'type' => OutputType::[a-zA-Z]*/'type' => ${{ matrix.OutputType }}/" config/config.php
+
 #      - name: Run app
 #        run:  API_KEY=${{ secrets.API_KEY }} php index.php
 
